<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MealPlanner</string>
    <string name="create_account">Create Account</string>
    <string name="join_us_to_start_your_healthy_journey">Join us to start your healthy journey.</string>
    <string name="full_name">Full Name</string>
    <string name="knife_and_spoon_icon">Knife and Spoon Icon</string>
    <string name="person_name">John Doe</string>
    <string name="email">Email</string>
    <string name="hello_example_com">hello@example.com</string>
    <string name="password_dots">••••••••</string>
    <string name="password">Password</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="google">Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue_your_healthy_journey">Sign in to continue your healthy journey.</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="login_successful">Login Successful</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="planner">Planner</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="meal_of_the_day">Meal Of The Day</string>
    <string name="plan_now">Plan Now</string>
    <string name="add_to_planner">Add to Planner</string>
    <string name="hi_user">Welcome\n%1$s</string>
    <string name="meal_image">Meal Image</string>
    <string name="you_may_try">You May Try...</string>
    <string name="hello_breakfast">Breakfast!</string>
    <string name="back_button">Back Button</string>
    <string name="time_icon">Time Icon</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="play_button">Play Button</string>
    <string name="tutorial_video">Tutorial Video</string>
    <string name="steps">Steps</string>
    <string name="something_went_wrong">Something went wrong. Try again later :(</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="ingredient_icon">Ingredient Icon</string>
    <string name="ingredients">Ingredients</string>
    <string name="no_meal_selected">No meal selected </string>
    <string name="add_to_favorites_failed">Failed to add your meal to Favorites </string>
    <string name="remove_from_favorites_failed">Failed to remove the meal from Favorites </string>
    <string name="there_are_no_meals_in_favorites">There are no meals in Favorites </string>
    <string name="remove_from_favorite">Remove From Favorites </string>
    <string name="add_to_planner_failed">Failed to add your meal to Planner </string>
    <string name="remove_from_planner_failed">Failed to remove the meal from Planner </string>
    <string name="there_are_no_meals_in_planner">There are no meals in Planner </string>
    <string name="remove_from_planner">Remove From Planner </string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="meal_removed_from_favorites_successfully">Meal removed from favorites successfully</string>
    <string name="meal_added_to_favorites_successfully">Meal added to favorites successfully!</string>
    <string name="healthy_and_tasty">Healthy and Tasty</string>
    <string name="error_load_trending_ingredients">Failed to load trending ingredients</string>
    <string name="error_load_categories">Failed to load categories</string>
    <string name="error_load_areas">Failed to load areas</string>
    <string name="error_search_failed">Search failed</string>
    <string name="error_load_meals_category">Failed to load meals for category</string>
    <string name="error_load_meals_ingredient">Failed to load meals for ingredient</string>
    <string name="error_load_meals_area">Failed to load meals for area</string>
    <string name="search_error">"Search error: "</string>
    <string name="no_meals_found">No meals found</string>
    <string name="meal_added_to_planner">Meal Added To Planner</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="you_need_an_account_to_use_this_nsign_in_and_continue">You need an account to use this.\nSign in and continue.</string>
    <string name="no_meals_planned_for_this_day">No meals planned for this day</string>
</resources>