<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".presentation.login.view.LoginFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.92" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="@dimen/corner_radius_medium"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineStart"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/knife_and_spoon_icon"
            android:src="@drawable/icon_knife_spoon" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtViewWelcomeBack"
        style="@style/TextAppearance.MealPlanner.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_back"
        android:textColor="@color/text_primary"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <TextView
        android:id="@+id/txtViewSignInToContinue"
        style="@style/TextAppearance.MealPlanner.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_to_continue_your_healthy_journey"
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtViewWelcomeBack" />

    <TextView
        android:id="@+id/txtViewEmail"
        style="@style/TextAppearance.MealPlanner.LabelLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtViewSignInToContinue" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MealPlanner.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtViewEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/Widget.MealPlanner.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="8dp"
            android:hint="@string/hello_example_com"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtViewPassword"
        style="@style/TextAppearance.MealPlanner.LabelLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/til_email" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MealPlanner.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:endIconDrawable="@drawable/ic_eye_off"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtViewPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/Widget.MealPlanner.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_lock"
            android:drawablePadding="8dp"
            android:hint="@string/password_dots"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/Widget.MealPlanner.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <TextView
        android:id="@+id/txtViewSignInWith"
        style="@style/TextAppearance.MealPlanner.LabelLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or_sign_in_with"
        android:textAllCaps="true"
        android:textColor="@color/text_secondary"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtViewGuest" />

    <TextView
        android:id="@+id/txtViewGuest"
        style="@style/TextAppearance.MealPlanner.LabelLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/continue_as_guest"
        android:textAllCaps="false"
        android:textColor="@color/text_secondary"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/txtViewSignInWith"
        app:layout_constraintEnd_toStartOf="@id/txtViewSignInWith"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart"
        app:layout_constraintTop_toTopOf="@+id/txtViewSignInWith" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/txtViewSignInWith"
        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/txtViewSignInWith"
        app:layout_constraintTop_toTopOf="@+id/txtViewSignInWith" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipGoogle"
        style="@style/Widget.MealPlanner.Chip.Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checkable="true"
        android:text="@string/google"
        app:chipIcon="@drawable/ic_google"
        app:chipIconVisible="true"
        app:layout_constraintEnd_toEndOf="@+id/txtViewSignInWith"
        app:layout_constraintStart_toStartOf="@+id/txtViewSignInWith"
        app:layout_constraintTop_toBottomOf="@+id/txtViewSignInWith" />


    <TextView
        android:id="@+id/txtViewDontHaveAccount"
        style="@style/TextAppearance.MealPlanner.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="4dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/verticalGuidelineStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTextSignUp"
        style="@style/Widget.MealPlanner.Button.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="@id/txtViewDontHaveAccount"
        app:layout_constraintStart_toEndOf="@id/txtViewDontHaveAccount"
        app:layout_constraintTop_toTopOf="@id/txtViewDontHaveAccount" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cooking_loader" />

</androidx.constraintlayout.widget.ConstraintLayout>